* Better hover for slide navigation button * Proper reset of slides 1 & 2

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ footer {
     margin: 0 auto; }
     footer nav button {
       width: 44px; }
+      footer nav button:hover {
+        background: #E6FFF3; }
       footer nav button.current {
         background: #E6FFF3; }
 
