--- a/scss/style.scss
+++ b/scss/style.scss
@@ -171,6 +171,11 @@ span.bold {
     font-weight: bold;
 }
 
+span.cta {
+    background: #E6FFF3;
+    padding: 3px;
+}
+
 .slide {        
     position: absolute;
     transition: .4s;
