minor changes to credits page (mostly text)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -724,6 +724,7 @@ span.cta {
 
             .created-by {
                 font-size: 26px;
+                margin-bottom: 0;
             }
 
             > h1 {
