--- a/scss/style.scss
+++ b/scss/style.scss
@@ -815,7 +815,37 @@ span.cta {
             transition: fill .15s;
             > use {
                 pointer-events: none;
-            }            
+            }
+            
+            @keyframes ftue-hop {
+                60% {
+                    transform: scaleY(1) translateY(0);
+                    animation-timing-function: ease-in-out;
+                }
+                70% {
+                    transform: scaleY(0.8);
+                    animation-timing-function: ease-out;
+                }
+                80% {
+                    transform: scaleY(1.1) translateY(-20px);
+                    animation-timing-function: ease-in;
+                }
+                90% {
+                    transform: scaleY(0.85) translateY(0);
+                    animation-timing-function: ease-out;
+                }
+                100% {
+                    transform: scaleY(1) translateY(0);
+                    animation-timing-function: ease-in-out;
+                }
+            }
+        }
+
+        &.ftue-hop {
+            > svg {
+                animation: ftue-hop 6s 6s infinite;
+                transform-origin: bottom center;
+            }
         }
 
         &:hover {
