--- a/scss/style.scss
+++ b/scss/style.scss
@@ -199,6 +199,10 @@ span.cta {
         align-items: center;
         text-align: center;
 
+        > p:first-of-type {
+            font-size: 24px;
+        }
+
         > h1 {
             font-size: 48px;
             margin-bottom: 24px;
@@ -240,7 +244,6 @@ span.cta {
                 flex-grow: 1;
                 margin-right: -20px;
                 margin-left: 10px;
-                align-self: center;
             }
         }
 
