--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,7 @@ a {
 // end general
 
 body {
-    background: #cccccc;
+    // background: #cccccc;
     display: flex;
     height: 100vh;
     justify-content: center;
@@ -38,7 +38,7 @@ body {
     transition: background-color .4s;
     min-height: 600px;
     min-width: 960px;
-
+    
     &.credits {
         background: #113A27;
 
@@ -57,7 +57,7 @@ body {
 main {
     width: 960px;
     height: 540px;
-    background: white;
+    // background: white;
     align-self: center;
     position: relative;
 
@@ -209,11 +209,70 @@ span.cta {
         }
 
         .play-time {
-            opacity: 0.5;
+            color: #889d93;
+        }
+
+        // > p:last-of-type {
+        //     margin-top: auto;
+        // }
+
+        .intro-animation-container {
+            margin: auto 0;
+            position: relative;
+            overflow: hidden;
+            width: 100vw;
+            flex: 1;
+
+            > * {
+                position: absolute;
+                left: -800px;
+                right: -800px;
+
+                > * {
+                    position: absolute;
+                }                
+                
+                &:nth-child(1) { --depth: -3; }
+                &:nth-child(2) { --depth: -2; }
+                &:nth-child(3) { --depth: -1; }
+                &:nth-child(4) { --depth: 1; }
+                &:nth-child(5) { --depth: 2; }
+                &:nth-child(6) { --depth: 3; }
+
+                top: calc(40% + (1 - var(--depth)) * -6%);
+                transform: scale(calc(1 + var(--depth) / 10));
+
+                &.cabs-container {
+                    overflow: hidden;
+                    height: 36.896px;
+    
+                    svg {
+                        width: 72.887px;
+                        height: 36.896px;
+                        
+                        fill: #3FE09C;
+                        
+                        position: absolute;
+                        left: -72.887px;
+                        transition: left 10s linear;
+                        &.drive {
+                            left: 100%;
+                        }
+
+                        &.green {
+                            fill: #83FB4C;
+                        }
+
+                        &.blue {
+                            fill: #43BBF6;
+                        }
+                    }
+                }
+            }
         }
 
         > button {
-            margin-top: auto;
+            
         }
     }
 
@@ -368,7 +427,6 @@ span.cta {
                     .bottom-part {
                         display: flex;
                         flex-direction: column;
-                        align-items: center;
 
                         p {
                             text-align: center;
@@ -797,7 +855,11 @@ span.cta {
 
 .side-by-side-buttons {
     display: flex;
-    justify-content: space-between;
+    
+    button {
+        flex: 1;
+        margin: 0 4px;
+    }
 }
 
 .report-box {
